# mcp-walmart-ads

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.json  pyproject.toml  server.json
.github/workflows/: ci.yml
src/mcp_walmart_ads/: auth.py  client.py  config.py  discovery.py  resources.py  server.py  specs.py
src/mcp_walmart_ads/docs/display/: ad-groups.md  audiences.md  brand-landing-page.md  campaigns.md  catalog.md  creative-associations.md  creative.md  folder.md  forecast.md  itemset-campaign-association.md  itemsets.md  snapshot-reports.md  stats.md  targeting.md  video.md
src/mcp_walmart_ads/docs/search/: ad-groups.md  ad-items.md  advanced-insights.md  audit-snapshot.md  bid-multipliers.md  campaigns.md  catalog-item-search.md  keywords.md  placements.md  snapshot-reports.md  sponsored-brands.md  sponsored-videos.md  stats.md  top-search-trends.md
src/mcp_walmart_ads/specs/display/: ad-id-token-generation.openapi.json  conversion-rest-api.openapi.json  display-rest-api.openapi.json
src/mcp_walmart_ads/specs/search/: sponsored-products.openapi.json
tests/: test_auth.py  test_client.py  test_config.py  test_resources.py  test_specs.py
